reverted back to using web essentials to compile the less source

--- a/src/Bloggy.Client.Web/Content/bootstrap/bootstrap.less
+++ b/src/Bloggy.Client.Web/Content/bootstrap/bootstrap.less
@@ -45,6 +45,8 @@
 @import "popovers.less";
 @import "carousel.less";
 
+@import 'cosmo/bootswatch.less';
+
 // Utility classes
 @import "utilities.less";
 @import "responsive-utilities.less";
