listing the blogposts on the home UI

--- a/src/Bloggy.Client.Web/Content/bloggy.main.css
+++ b/src/Bloggy.Client.Web/Content/bloggy.main.css
@@ -1,3 +1,19 @@
 ﻿div[role="main"] {
     margin-top: 60px;
 }
+
+div.blog-post-item div.head .text-info-custom {
+    margin-bottom: 10px;
+}
+
+div.blog-post-item div.head .misc span.tag-label {
+    margin-right: 5px;
+}
+
+div.blog-post-item div.head .misc span.tag-label:last-of-type {
+    margin-right: 0;
+}
+
+div.blog-post-item div.head .misc span.tag-label a {
+    color: #fff;
+}
