--- a/src/Bloggy.Client.Web/Content/bloggy.main.less
+++ b/src/Bloggy.Client.Web/Content/bloggy.main.less
@@ -1,3 +1,31 @@
 ﻿div[role="main"] {
     margin-top: 60px;
 }
+
+div.blog-post-item {
+
+    div.head {
+
+        .title {
+        }
+
+        .text-info-custom {
+            margin-bottom: 10px;
+        }
+
+        .misc {
+
+            span.tag-label {
+                margin-right: 5px;
+
+                &:last-of-type {
+                    margin-right: 0;
+                }
+
+                a {
+                    color: #fff;
+                }
+            }
+        }
+    }
+}
