--- a/src/Bloggy.Client.Web/Views/Default/Index.cshtml
+++ b/src/Bloggy.Client.Web/Views/Default/Index.cshtml
@@ -3,4 +3,4 @@
     ViewBag.Title = "Index";
 }
 
-@Html.Partial("_BlogPostListPartial", Model)
+@Html.Partial("_BlogPostListPartial", Model.BlogPosts)
