--- a/src/Bloggy.Client.Web/Views/Shared/_BlogPostListItemPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_BlogPostListItemPartial.cshtml
@@ -1,32 +1,37 @@
-﻿@model Bloggy.Client.Web.Models.BlogPostModelLight
-<div class="row blog-post-list-item">
-    <div class="col-md-12 item-header">
-        <h4 class="title">
-            <a href="/post/@Model.Slug">
-                <strong>@Model.Title</strong>
-            </a>
-        </h4>
-        <div class="text-info text-info-custom">
-            @Model.BriefInfo
-        </div>
-        <div class="misc">
-            <div class="row">
-                <div class="well well-sm well-sm-custom">
-                    @Model.CreatedOn.ToString("yyyy-MM-dd HH:mm"), Tugberk Ugurlu
-                    <div class="span5 misc-item" style="float:right;">
-                        @foreach (var tag in Model.Tags)
-                        {
-                            <span class="label label-default linklabel">
-                                <a href="tags/@tag.Slug" style="color:white">@tag.Name</a>
-                            </span>
-                        }
-                    </div>
+﻿@model Bloggy.Client.Web.Models.BlogPostModelLight      
+<div class="blog-post-item">
+    <div class="row head">
+        <div class="col-sm-12">
+            <h2 class="title">
+                <a href="@Url.Action("Index", "BlogPost", new { slug = Model.Slug })">@Model.Title</a>
+            </h2>
+            <div class="text-info text-info-custom">
+                @Model.BriefInfo
+            </div>
+            <div class="row misc">
+                <div class="col-sm-3">
+                    <i class="glyphicon glyphicon-calendar"></i> @Model.CreatedOn.ToString("yyyy-MM-dd HH:mm")
+                </div>
+                <div class="col-sm-3">
+                    <i class="glyphicon glyphicon-user"></i> Tugberk Ugurlu
+                </div>
+                <div class="col-sm-6">
+                    @foreach (var tag in Model.Tags)
+                    {
+                        <span class="label label-info tag-label">
+                            <a href="#">@tag.Name</a>
+                        </span>
+                    }
                 </div>
             </div>
-            <div class="col-md-12 content">
-                @Html.Raw(Model.Content)
-            </div>
-            <a href="/post/@Model.Slug">Comments <span class="badge">0</span></a>
+        </div>
+    </div>
+
+    <hr />
+
+    <div class="row">
+        <div class="col-sm-12">
+            @Html.Raw(Model.Content)
         </div>
     </div>
 </div>
