--- a/src/Bloggy.Client.Web/Content/bloggy.main.less
+++ b/src/Bloggy.Client.Web/Content/bloggy.main.less
@@ -14,6 +14,10 @@ div.blog-post-item {
         }
 
         .misc {
+            margin-bottom: 10px;
+        }
+
+        .tags {
 
             span.tag-label {
                 margin-right: 5px;
