--- a/src/Bloggy.Client.Web/Views/Shared/_BlogPostListItemPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_BlogPostListItemPartial.cshtml
@@ -9,13 +9,13 @@
                 @Model.BriefInfo
             </div>
             <div class="row misc">
-                <div class="col-sm-4">
+                <div class="col-sm-4 misc-item">
                     <i class="glyphicon glyphicon-calendar"></i> @Model.CreatedOn.ToString("yyyy-MM-dd HH:mm")
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 misc-item">
                     <i class="glyphicon glyphicon-user"></i> Tugberk Ugurlu
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 misc-item">
                     @* Comments Count *@
                 </div>
             </div>
