displaying one blog post on /post/{slug} page

--- a/src/Bloggy.Client.Web/Content/bloggy.main.css
+++ b/src/Bloggy.Client.Web/Content/bloggy.main.css
@@ -77,3 +77,9 @@ input[type=password].input-validation-error:focus {
         text-align: center;
     }
 }
+
+footer {
+    background-color: #9954bb;
+    color: #fff;
+    padding: 20px;
+}
