--- a/src/Bloggy.Client.Web/Content/bloggy.main.less
+++ b/src/Bloggy.Client.Web/Content/bloggy.main.less
@@ -102,3 +102,10 @@ input[type=password].input-validation-error {
         }
     }
 }
+
+footer {
+
+    background-color: #9954bb;
+    color: #fff;
+    padding: 20px;
+}
