dispalying comments under the post now

--- a/src/Bloggy.Client.Web/Content/bloggy.main.css
+++ b/src/Bloggy.Client.Web/Content/bloggy.main.css
@@ -28,6 +28,29 @@ div.blog-post-item div.head .tags span.tag-label a {
     color: #fff;
 }
 
+.comment-list-container .comment-container {
+    padding: 10px;
+    margin-bottom: 5px;
+    border: 1px solid #CCCCCC;
+    background-color: #E9F7FD;
+}
+
+.comment-list-container .comment-container .comment-gravatar-container {
+    float: left;
+    margin-bottom: 5px;
+    margin-right: 10px;
+}
+
+.comment-list-container .comment-container .comment-content-container .comment-content-header {
+    padding-bottom: 10px;
+    font-style: italic;
+}
+
+.comment-list-container .comment-container-by-author {
+    border: 1px solid #E7D59C;
+    background-color: #FBFFD4;
+}
+
 .validation-summary-errors {
     color: #fff;
     background-color: #ff0039;
@@ -57,6 +80,13 @@ input[type=password].input-validation-error:focus {
     border-color: #bbbbbb;
 }
 
+footer {
+    background-color: #9954bb;
+    color: #fff;
+    padding: 20px;
+    margin-top: 20px;
+}
+
 @media (max-width: 767px) {
     div[role="main"] {
         border-bottom: 1px solid #eee;
@@ -76,10 +106,4 @@ input[type=password].input-validation-error:focus {
     .blog-post-item .head .tags {
         text-align: center;
     }
-}
-
-footer {
-    background-color: #9954bb;
-    color: #fff;
-    padding: 20px;
 }
