--- a/src/Bloggy.Client.Web/Views/Shared/_Layout.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_Layout.cshtml
@@ -10,10 +10,10 @@
         @Html.Partial("_TopHeaderPartial")
         <div class="container" role="main">
             <div class="row">
-                <div class="col-md-8">
+                <div id="content" class="col-md-8">
                     @RenderBody()
                 </div>
-                <div class="col-md-4">
+                <div id="side" class="col-md-4">
                     @Html.Partial("_RightSidePartial")
                 </div>
             </div>
