--- a/src/Bloggy.Client.Web/Views/Shared/_RightSidePartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_RightSidePartial.cshtml
@@ -1,1 +1,34 @@
-﻿
+﻿<div class="row">
+    <div class="col-sm-12 big-badge-holder">
+        <iframe style="height: 240px; width: 120px;" marginheight="0" src="http://rcm.amazon.com/e/cm?lt1=_blank&amp;bc1=000000&amp;IS2=1&amp;bg1=FFFFFF&amp;fc1=000000&amp;lc1=0000FF&amp;t=tugsblo0c-20&amp;o=1&amp;p=8&amp;l=as4&amp;m=amazon&amp;f=ifr&amp;ref=ss_til&amp;asins=1430247258" frameborder="0" marginwidth="0" scrolling="no"></iframe>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-12 big-badge-holder">
+        <a href="http://mvp.microsoft.com/en-us/mvp/Ali%20Tugberk%20Ugurlu-4039968">
+            <img src="~/Content/img/MVP_Horizontal_BlueOnly9.png" alt="Tugberk Ugurlu, ASP.NET MVP" />
+        </a>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-12 big-badge-holder">
+        <a href="http://stackexchange.com/users/211547">
+            <img src="http://stackexchange.com/users/flair/211547.png" width="208" height="58" alt="profile for tugberk on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for tugberk on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+        </a>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-12">
+        <ul id="badge-list">
+            <li><a class="btn btn-info" href="http://twitter.com/tourismgeek"><i class="fa fa-twitter fa-lg"></i></a></li>
+            <li><a class="btn btn-info" href="http://www.linkedin.com/in/tugberk"><i class="fa fa-linkedin fa-lg"></i></a></li>
+            <li><a class="btn btn-info" href="http://github.com/tugberkugurlu"><i class="fa fa-github fa-lg"></i></a></li>
+            <li><a class="btn btn-info" href="http://stackoverflow.com/users/463785/tugberk"><i class="fa fa-stack-exchange fa-lg"></i></a></li>
+            <li><a class="btn btn-info" href="https://plus.google.com/114404472683655231726?rel=author" rel="author"><i class="fa fa-google-plus fa-lg"></i></a></li>
+        </ul>
+        <div class="clearfix"></div>
+    </div>
+</div>
