disabled the submit button after the form submit

--- a/src/Bloggy.Client.Web/Content/bloggy.main.css
+++ b/src/Bloggy.Client.Web/Content/bloggy.main.css
@@ -113,10 +113,9 @@ footer {
 }
 
 @media (max-width: 767px) {
-    div[role="main"] {
+    #content {
         border-bottom: 1px solid #eee;
-        padding-bottom: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
     }
 
     .blog-post-item .head .misc div.misc-item {
