--- a/src/Bloggy.Client.Web/Content/bloggy.main.less
+++ b/src/Bloggy.Client.Web/Content/bloggy.main.less
@@ -143,11 +143,10 @@ footer {
 
 @media (max-width: 767px) {
 
-    div[role="main"] {
+    #content {
 
         border-bottom: 1px solid #eee;
-        padding-bottom: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
     }
 
     .blog-post-item {
