safely getting tags under a child action

--- a/src/Bloggy.Client.Web/Views/Shared/_RightSidePartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_RightSidePartial.cshtml
@@ -32,3 +32,9 @@
         <div class="clearfix"></div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-sm-12">
+        @Html.Action("List", "Tags")
+    </div>
+</div>
