--- a/src/Bloggy.Client.Web/Views/Tags/List.cshtml
+++ b/src/Bloggy.Client.Web/Views/Tags/List.cshtml
@@ -8,7 +8,7 @@
     @foreach (TagModel tag in Model)
     {
         <li>
-            <a href="#">
+            <a href="@Url.Action("index", "tags", new { slug = tag.Slug })">
                 @tag.Name (@tag.Count)
             </a>
         </li>
