--- a/src/Bloggy.Client.Web/Views/Shared/_RightSidePartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_RightSidePartial.cshtml
@@ -38,3 +38,9 @@
         @Html.Action("List", "Tags")
     </div>
 </div>
+
+<div class="row">
+    <div class="col-sm-12">
+        @Html.Action("List", "Archive")
+    </div>
+</div>
