--- a/src/Bloggy.Client.Web/Views/Shared/_TopHeaderPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_TopHeaderPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="navbar navbar-inverse">
+﻿<div class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
         <div class="navbar-header">
             <a href="../" class="navbar-brand">Tugberk Ugurlu</a>
