--- a/src/Bloggy.Client.Web/Views/Tags/List.cshtml
+++ b/src/Bloggy.Client.Web/Views/Tags/List.cshtml
@@ -4,7 +4,7 @@
     Layout = null;
 }
 
-<ul>
+<ul class="none-style-list inline-list labeled-list">
     @foreach (TagModel tag in Model)
     {
         <li>
