--- a/src/Bloggy.Client.Web/Views/Shared/_RightSidePartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_RightSidePartial.cshtml
@@ -35,12 +35,14 @@
 
 <div class="row">
     <div class="col-sm-12">
+        <h3>Tags</h3>
         @Html.Action("List", "Tags")
     </div>
 </div>
 
 <div class="row">
     <div class="col-sm-12">
+        <h3>Archive</h3>
         @Html.Action("List", "Archive")
     </div>
 </div>
