--- a/src/Bloggy.Client.Web/Views/Shared/_Layout.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
         @Styles.Render("~/Content/css")
     </head>
     <body itemscope itemtype="http://schema.org/WebPage">
+        <div id="fb-root"></div>
         @Html.Partial("_TopHeaderPartial")
         <div class="container" role="main">
             <div class="row">
@@ -37,5 +38,17 @@
                 });
             }());
         </script>
-</body>
+        <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
+        <div id="fb-root"></div>
+        <script>
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/tr_TR/all.js#xfbml=1";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+        <script type="text/javascript" async src="//assets.pinterest.com/js/pinit.js"></script>
+    </body>
 </html>
