--- a/src/Bloggy.Client.Web/Views/Shared/_TopHeaderPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_TopHeaderPartial.cshtml
@@ -14,10 +14,10 @@
                     <a href="@Url.Action("index", "default")">Blog</a>
                 </li>
                 <li>
-                    <a href="@Url.Action("index", "default")">About</a>
+                    <a href="@Url.Action("about", "default")">About</a>
                 </li>
                 <li>
-                    <a href="@Url.Action("index", "default")">Contact</a>
+                    <a href="@Url.Action("contact", "default")">Contact</a>
                 </li>
             </ul>
         </div>
