--- a/src/Bloggy.Client.Web/Content/bloggy.main.less
+++ b/src/Bloggy.Client.Web/Content/bloggy.main.less
@@ -203,12 +203,13 @@ footer {
     margin-top: 20px;
 }
 
-@media (max-width: 767px) {
-
+@media (max-width: 992px) {
+    
     #content {
 
         border-bottom: 1px solid #eee;
         margin-bottom: 20px;
+        padding-bottom: 20px;
     }
 
     .blog-post-item {
@@ -238,4 +239,7 @@ footer {
     #side > div.row {
         text-align: center;
     }
+}
+
+@media (max-width: 767px) {
 }
