--- a/src/Bloggy.Client.Web/Views/Shared/_Layout.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    string googleAnalyticsTrackingId = ConfigurationManager.AppSettings["Google:Analytics:TrackingId"];
+}
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -49,6 +52,18 @@
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script>
-        <script type="text/javascript" async src="//assets.pinterest.com/js/pinit.js"></script>
+        @if (string.IsNullOrWhiteSpace(googleAnalyticsTrackingId) == false)
+        {
+            <script type="text/javascript">
+                var _gaq = _gaq || [];
+                _gaq.push(['_setAccount', '@googleAnalyticsTrackingId']);
+                _gaq.push(['_trackPageview']);
+                (function () {
+                    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+                })();
+            </script>   
+        }
     </body>
 </html>
