handled page titles, descriptions and meta tags

--- a/src/Bloggy.Client.Web/Views/Archive/Index.cshtml
+++ b/src/Bloggy.Client.Web/Views/Archive/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Bloggy.Client.Web.ViewModels.ArchiveHomeViewModel
 @{
+    ViewBag.Title = "Sorted By: Month (" + Url.RequestContext.RouteData.Values["month"].ToString() + ") and Year (" + Url.RequestContext.RouteData.Values["year"].ToString();
 }
 
 <div class="alert alert-info">
