--- a/src/Bloggy.Client.Web/Views/Default/Index.cshtml
+++ b/src/Bloggy.Client.Web/Views/Default/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Bloggy.Client.Web.ViewModels.HomeViewModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.MetaDescription = "Tugberk Ugurlu's Blog. Enthusiastic tourism undergraduate student and programmer Tugberk Ugurlu writes about programming and tourism.";
 }
 
 @Html.Partial("_BlogPostListPartial", Model.BlogPosts)
